layout/build/nsLayoutModule.cpp
@@ -433,6 +433,10 @@ Initialize()
     NS_WARNING("Could not get an observer service.  We will leak on shutdown.");
   }
 
+#ifdef DEBUG
+  nsStyleContext::AssertStyleStructMaxDifferenceValid();
+#endif
+
   return NS_OK;
 }
 
